# geany-plugins

./: MAINTAINERS  Makefile.am  configure.ac
autorun/: AUTHORS  CMakeLists.txt  Makefile.am  NEWS  README  THANKS
autorun/src/: .clang-format  Makefile.am  autorun.c  autorun.h  menu.c  menu.h  plugin_main.c  project.c  project.h  spawn.c  spawn.h  utils.c  utils.h
po/: POTFILES.in
workbench/src/: menu.c  menu.h  plugin_main.c  popup_menu.c  popup_menu.h  sidebar.c  sidebar.h  utils.c  utils.h  wb_project.c  wb_project.h  workbench.c  workbench.h
